--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,53 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+body {
+    background: #f9f9f9;
+    min-height: 100vh;
+    overflow-x: hidden;
+}
+
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 30px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.logo{
+    font-size: 2em;
+    color: #359381;
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.letter{
+    color: rgb(233, 183, 183);
+}
+
+.navigation a{
+    flex-direction: row;
+    padding: 4px;
+    text-decoration: none;
+    color:black ;
+    font-weight: 400;
+    border-radius: 20px;
+    margin: 0 10px;
+}
+/*  */
+.logo:hover{
+    color: rgb(233, 183, 183);
+}
+
+.navigation a:hover{
+    color: rgb(238, 175, 175);
+}
+
+/* section */
