--- a/css/style.css
+++ b/css/style.css
@@ -20,17 +20,17 @@ header {
     width: 100%;
     padding: 30px 100px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     z-index: 100;
 }
 
 .logo{
     font-size: 2em;
-    color: #359381;
+    color: rgb(233, 183, 183);
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
-    border-radius: 10px;
+    margin-right: 270px;
 }
 
 .letter{
@@ -41,21 +41,22 @@ header {
     flex-direction: row;
     padding: 4px;
     text-decoration: none;
-    color:black ;
-    font-weight: 400;
+    color:#359381;
+    font-weight: 700;
     border-radius: 20px;
     margin: 0 10px;
 }
 /*  */
 .logo:hover{
-    color: rgb(233, 183, 183);
+    color: rgb(235, 175, 175);
 }
 
 .navigation a:hover{
-    color: rgb(238, 175, 175);
+    color: rgb(233, 183, 183);
+    /* background: #359381; */
 }
 
-/* section */
+/* section one */
 .parallax{
     position: relative;
     display: flex;
@@ -67,5 +68,26 @@ header {
 #text{
     position: absolute;
     font-size: 5em;
-    color:rgba(0, 0, 0, 0.493);
+    color:white;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+}
+
+/* the images and organizing the images */
+.parallax img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    pointer-events: none;
+}
+/* section one */
+
+/* section two */
+section{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
