--- a/css/style.css
+++ b/css/style.css
@@ -83,11 +83,15 @@ header {
 /* section one */
 
 /* section two */
-section{
+.sec{
+    margin-top: 100px;
     position: relative;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background: #003329;
+    padding: 100px;
+}
+
+.sec h2{
+    font-size: 3em;
+    color: #fff;
+    margin-bottom: 10px;
 }
