--- a/css/style.css
+++ b/css/style.css
@@ -95,3 +95,10 @@ header {
     color: #fff;
     margin-bottom: 10px;
 }
+
+.sec p{
+    font-size: 1em;
+    color: #fff;
+    font-weight: 300;
+}
+/* section two */
